# gera-shower-cpp

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  command.text  readme.md
images/: hardware-splash-screen.xcf  software-background.xcf  software-logo.xcf  software-splash.xcf
